# Regulatory-Monitoring-Pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  plan.md  pyproject.toml
.claude/commands/: create-spec.md
.claude/specs/: 01-project-scaffolding.md  02-data-models-persistence.md  03-crawler-adapters.md  04-parser-html-pdf.md  05-normalizer-engine.md
.github/workflows/: ci.yml
config/: parser_patterns.yaml
src/regmon/: __init__.py  __main__.py  cli.py  scheduler.py
src/regmon/actions/: __init__.py
src/regmon/approval/: __init__.py
src/regmon/classification/: __init__.py
src/regmon/config/: __init__.py  settings.py  source_registry.py  sources.yaml
src/regmon/crawler/: __init__.py  agent.py  fetcher.py  rate_limiter.py  robots_cache.py  types.py
src/regmon/crawler/adapters/: __init__.py  base.py  eu_ai_act.py  fda.py  rbi.py  sebi.py
src/regmon/db/: __init__.py  audit_log.py  document_store.py  engine.py  schema.py
src/regmon/dedup/: __init__.py
src/regmon/embeddings/: __init__.py
src/regmon/llm/: __init__.py
src/regmon/models/: __init__.py  documents.py  enums.py  pipeline.py  results.py
src/regmon/normalize/: __init__.py  boilerplate.py  encoding_repair.py  language.py
src/regmon/notifications/: __init__.py
src/regmon/parser/: __init__.py  html_parser.py  metadata.py  pdf_parser.py
src/regmon/pipeline/: __init__.py
src/regmon/rag/: __init__.py
src/regmon/risk/: __init__.py
src/regmon/summarization/: __init__.py
tests/: __init__.py  conftest.py  test_audit_log.py  test_crawler_adapters.py  test_crawler_agent.py  test_crawler_fetcher.py  test_db_engine.py  test_document_store.py  test_models.py  test_normalize_agent.py  test_normalize_boilerplate.py  test_normalize_encoding.py  test_normalize_language.py  test_parser_agent.py  test_parser_html.py  test_parser_metadata.py  test_parser_pdf.py  test_settings.py  test_smoke.py
tests/fixtures/eu_ai_act/: article_detail.html  newsroom_page1.html
tests/fixtures/fda/: federal_register.json  press_releases_rss.xml
tests/fixtures/normalize/: boilerplate_rbi.txt  boilerplate_sebi.txt  clean_text.txt  mixed_lang.txt  mojibake_latin1.txt  mojibake_utf8.txt
tests/fixtures/parser/: eu_ai_act_article.html  fda_press_release.html  rbi_notification.html  sebi_circular.html
tests/fixtures/rbi/: notification_detail.html  notifications_list_page1.html  press_detail.html  press_list_page1.html
tests/fixtures/sebi/: circular_detail.html  circulars_list_page1.html
