[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regmon"
version = "0.0.1"
description = "Regulatory Monitoring Pipeline — multi-agent crawler/parser/classifier/risk pipeline for regulatory sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["regulatory", "compliance", "monitoring", "rag", "pipeline"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.19",
  "httpx>=0.28",
  "pyyaml>=6.0",
  "tenacity>=8.2",
  "beautifulsoup4>=4.12",
  "feedparser>=6.0",
  "lxml>=5.0",
  "pypdf>=4.0",
  "dateparser>=1.2",
  "ftfy>=6.1",
  "lingua-language-detector>=2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "black>=24.8",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "build>=1.2",
  "types-PyYAML>=6.0",
  "types-beautifulsoup4>=4.12",
]
faiss = ["faiss-cpu>=1.8"]
chroma = ["chromadb>=0.5"]
local-llm = ["openai>=1.30"]
local-embeddings = ["sentence-transformers>=3.0"]
postgres = ["asyncpg>=0.29"]

[project.scripts]
regmon = "regmon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
packages = ["regmon"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["faiss.*", "chromadb.*", "sentence_transformers.*", "openai.*", "ollama.*", "aiosqlite.*", "asyncpg.*", "feedparser.*", "httpx.*", "tenacity.*", "bs4.*", "pypdf.*", "dateparser.*", "ftfy.*", "chardet.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: end-to-end integration tests, opt-in via 'pytest -m integration'",
]

[tool.coverage.run]
source = ["regmon"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
